# drivezone

./: .env  Dockerfile.celery  Dockerfile.web  docker-compose.yml  entrypoint.sh  manage.py  postman.json  pyproject.toml  readme.md
backend/: settings.py  urls.py
backend/apps/auth/: apps.py  serializers.py  urls.py  views.py
backend/apps/brands/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/brands/migrations/: 0001_initial.py  0002_initial.py
backend/apps/cars/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/cars/migrations/: 0001_initial.py  0002_initial.py
backend/apps/currency/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/currency/migrations/: 0001_initial.py
backend/apps/dealers/: apps.py  models.py  urls.py  views.py
backend/apps/dealers/migrations/: 0001_initial.py  0002_initial.py
backend/apps/premium/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/premium/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/core/: __init__.py  celery.py  permissions.py
